--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,25 @@
 */*.sim/
 */*.runs/
 */*.ip_user_files/
+#########
+#Reports
+#########
+!*.rpt
+!*.txt
+!*.md
+!*.tex
+!*.typ
+!*.html
+!*.pdf
+!*.png
+!*.jpg
+!*.svg
+!*.bmp
+!*.webp
+!*report*/
+!*.assets/
+help*.txt
+!*.vdi
 ###########################################################################
 ##	VIVADO
 ###########################################################################
@@ -78,17 +97,6 @@
 #########
 !*.jou
 *backup*.jou
-#########
-#Reports
-#########
-!*.rpt
-!*.txt
-!*.md
-!*.html
-!*.pdf
-!*report*/
-help*.txt
-!*.vdi
 #########
 #C-files
 #########
