--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,10 @@
 !*.assets/
 help*.txt
 !*.vdi
+#########
+#VSCode
+#########
+!**/.vscode/*.json
 ###########################################################################
 ##	VIVADO
 ###########################################################################
