something wrong with simulation

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,6 @@
 #########
 *
 !.gitignore
-!*.toml
-!*.code-workspace
 !*/
 */*.cache/
 */*.hw/
@@ -35,9 +33,16 @@
 help*.txt
 !*.vdi
 #########
-#VSCode
+# VSCode
 #########
+!*.code-workspace
 !**/.vscode/*.json
+##########
+# TerosHDL
+##########
+!*.toml
+!**/*.yaml
+!**/*.yml
 ###########################################################################
 ##	VIVADO
 ###########################################################################
